archetect-templating/tests/snapshots/test_templates__vm@if_cond.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% if value %}\n  was true\n{% endif %}"
info:
  value: 42
input_file: archetect_minijinja/tests/inputs/if_cond.txt
---

  was true


