archetect-templating/tests/snapshots/test_templates__vm@if_cond_elif.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% if value %}\n  first branch\n{% elif other_value %}\n  second branch\n{% else %}\n  else\n{% endif %}"
info:
  other_value: false
  value: false
input_file: archetect_templating/tests/inputs/if_cond_elif.txt
---

  else


