archetect-templating/tests/snapshots/test_templates__vm@if_cond_else.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{% if value %}\n  was true\n{% else %}\n  was false\n{% endif %}"
info:
  value: false
input_file: archetect_minijinja/tests/inputs/if_cond_else.txt
---

  was false


