archetect-templating/tests/snapshots/test_templates__vm@ifexpr.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ 42 if something_true else 23 }}\n{{ 42 if not something_true else 23 }}\n{{ 42 if not something_true }}\n{{ (42 if not something_true) is undefined }}"
info:
  something_true: true
input_file: archetect_templating/tests/inputs/ifexpr.txt
---
42
23

true

