archetect-templating/tests/snapshots/test_templates__vm@include_ignore_choice.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "Before\n{% include [\"missing_template.txt\", template] %}\nAfter"
info:
  template: simple_include.txt
input_file: archetect_templating/tests/inputs/include_ignore_choice.txt
---
Before
Hello  from included template!
After

