archetect-templating/tests/snapshots/test_templates__vm@include_ignore_missing.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "Before\n{% include template ignore missing %}\nAfter"
info:
  template: missing_template.txt
input_file: archetect_templating/tests/inputs/include_ignore_missing.txt
---
Before

After

