archetect-templating/tests/snapshots/test_templates__vm@list.txt.snap
---
source: archetect_minijinja/tests/test_templates.rs
description: "{{ [1, 2, 3]|length }}"
info: {}
input_file: archetect_minijinja/tests/inputs/list.txt
---
3

