archetect-templating/tests/snapshots/test_templates__vm@loop.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "<ul>\n{% for item in seq %}\n    <li>{{ item }}</li>\n{% endfor %}\n</ul>"
info:
  seq:
    - 1
    - 2
    - 3
input_file: archetect_templating/tests/inputs/loop.txt
---
<ul>

    <li>1</li>

    <li>2</li>

    <li>3</li>

</ul>

